[gd_scene load_steps=4 format=3 uid="uid://dust1y0r170t7"]

[ext_resource type="PackedScene" uid="uid://b3ygu6pkadmsm" path="res://nodes/note_frame.tscn" id="1_54jwe"]
[ext_resource type="Script" path="res://scripts/map_scene.gd" id="1_58207"]
[ext_resource type="PackedScene" uid="uid://1xt8ttogo0t7" path="res://nodes/centering.tscn" id="1_rhl41"]

[node name="MapScene" type="Node2D"]
script = ExtResource("1_58207")

[node name="Centering" parent="." instance=ExtResource("1_rhl41")]

[node name="NoteFrame" parent="Centering" instance=ExtResource("1_54jwe")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Back" type="Button" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 65.0
offset_bottom = 51.0
text = "Back"

[node name="Timeline" type="HSlider" parent="."]
offset_left = 21.0
offset_top = 53.0
offset_right = 513.0
offset_bottom = 69.0
size_flags_horizontal = 3

[node name="AudioSourcePath" type="LineEdit" parent="."]
offset_left = 20.0
offset_top = 73.0
offset_right = 447.0
offset_bottom = 104.0
text = "res://res/20240902001.mp3"
placeholder_text = "res://res/20240902001.mp3"

[node name="LoadAudio" type="Button" parent="."]
offset_left = 450.0
offset_top = 72.0
offset_right = 496.0
offset_bottom = 103.0
text = "Load"

[node name="PlayPause" type="Button" parent="."]
offset_left = 418.0
offset_top = 22.0
offset_right = 511.0
offset_bottom = 53.0
text = "Play/Pause
"

[node name="LoadedAudioStreamPath" type="Label" parent="."]
offset_left = 20.0
offset_top = 108.0
offset_right = 129.0
offset_bottom = 131.0
text = "(Loaded Audio Stream Path)"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="drag_started" from="Timeline" to="." method="_on_timeline_drag_started"]
[connection signal="pressed" from="LoadAudio" to="." method="_on_load_audio_pressed"]
[connection signal="pressed" from="PlayPause" to="." method="_on_play_pause_pressed"]
